# yuanjing-core

./: .gitignore  Cargo.toml  README.md  yuanjing.key
benches/: core_bench.rs
client_sdk/: evidence_schema.py  requirements.txt  sapt_simulator.py  verify_demo.py
data/mock/: ai_response_valid.json
docs/: API.md  Docking_Guidance.md  HANDOVER.md  YUANJING_ABSTRACT.md
scripts/: smoke_test_local.sh
src/: api.rs  config.rs  evidence.rs  fingerprint.rs  lib.rs  main.rs  mmr_store.rs  mmr_store.rs.bak  signer.rs
