[package]
name = "yuanjing-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# ⚠️ 关键修改：降级 image 版本以匹配 img_hash，并显式开启 jpeg/png 支持
image = { version = "0.23.14", features = ["jpeg", "png"] }
img_hash = "3.2"

# 密码学组件
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# 数据处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"

# 认证数据结构
ckb-merkle-mountain-range = "0.5"
hex = "0.4.3"
